--- a/app/src/main/res/layout/activity_bio_data.xml
+++ b/app/src/main/res/layout/activity_bio_data.xml
@@ -20,6 +20,7 @@
             android:layout_width="100sp"
             android:layout_height="100sp"
             android:layout_gravity="center"
+            android:contentDescription="TODO"
             android:src="@drawable/logo" />
 
         <TextView
@@ -27,15 +28,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="PERSONEL BIO DATA FORM"
+            android:text="PERSONNEL BIO DATA FORM"
             android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fullname_"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
-            android:hint="Full Name"
-            android:padding="@dimen/spacing_small">
+            android:padding="@dimen/spacing_small"
+
+            app:startIconContentDescription="@string/content_description_end_icon"
+
+            app:startIconDrawable="@drawable/ic_person_black_24dp">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -50,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Age"
-            android:padding="@dimen/spacing_small"
+            app:startIconDrawable="@drawable/ic_baseline_cake_24"     android:padding="@dimen/spacing_small"
 
             app:counterEnabled="false">
 
@@ -58,7 +63,7 @@
                 android:id="@+id/age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Age"
+
                 android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,14 +72,14 @@
             android:layout_height="wrap_content"
             android:hint="Phone"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_call_24"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Phone"
+
                 android:inputType="phone" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -85,6 +90,7 @@
             android:hint="Height"
             android:padding="@dimen/spacing_small"
 
+            app:startIconDrawable="@drawable/ic_baseline_height_24"
             app:counterEnabled="true"
             app:counterMaxLength="6">
 
@@ -92,7 +98,7 @@
                 android:id="@+id/height"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Height (cm)"
+
                 android:inputType="numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -101,7 +107,7 @@
             android:layout_height="wrap_content"
             android:hint="Weight"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_grain_24"
             app:counterEnabled="true"
             app:counterMaxLength="6">
 
@@ -109,7 +115,7 @@
                 android:id="@+id/weight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Weight (kg)"
+
                 android:inputType="numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -119,14 +125,14 @@
             android:layout_height="wrap_content"
             android:hint="Eye Colour"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/eye_colour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Eye Colour"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -135,30 +141,30 @@
             android:layout_height="wrap_content"
             android:hint="Hair Colour"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_view_headline_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/hair_colour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Eye Colour"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Tatoo/Tribal Marks"
+            android:hint="Tatoo/Tribal Marks?"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_emoji_emotions_24"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tatoo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Do you have a Tatoo/Tribal Marks?"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -168,14 +174,14 @@
             android:layout_height="wrap_content"
             android:hint="Gender"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_people_24"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Sex"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -184,14 +190,14 @@
             android:layout_height="wrap_content"
             android:hint="Marital Status"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_people_outline_24"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/marital"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Marital Status"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -200,14 +206,14 @@
             android:layout_height="wrap_content"
             android:hint="Blood Group"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_invert_colors_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/blood"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Blood Group"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -216,14 +222,14 @@
             android:layout_height="wrap_content"
             android:hint="Genotype"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_baseline_colorize_24"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/genotype"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Genotype"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -232,14 +238,14 @@
             android:layout_height="wrap_content"
             android:hint="Next Of Kin"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_person_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nok"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Next Of Kin name"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -248,14 +254,14 @@
             android:layout_height="wrap_content"
             android:hint="State Of Origin"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_change_history_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/state_of_origin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="State Of Origin"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -265,14 +271,14 @@
             android:layout_height="wrap_content"
             android:hint="LGA"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_track_changes_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/lga"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="LGA"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -281,14 +287,14 @@
             android:layout_height="wrap_content"
             android:hint="Hometown"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_change_history_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/hometown"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Hometown"
+
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -298,14 +304,14 @@
             android:layout_height="wrap_content"
             android:hint="National ID Card Number"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_card_membership_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="National ID Card Number"
+
                 android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -315,14 +321,14 @@
             android:layout_height="wrap_content"
             android:hint="Secondary School (year in)"
             android:padding="@dimen/spacing_small"
-
+            app:startIconDrawable="@drawable/ic_perm_contact_calendar_black_24dp"
             app:counterEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/school_in"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Secondary School (year in)"
+
                 android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -331,6 +337,7 @@
             android:layout_height="wrap_content"
             android:hint="Secondary School (year out)"
             android:padding="@dimen/spacing_small"
+            app:startIconDrawable="@drawable/ic_perm_contact_calendar_black_24dp"
 
             app:counterEnabled="false">
 
@@ -338,15 +345,15 @@
                 android:id="@+id/school_out"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Secondary School (year out)"
+
                 android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/home"
             android:layout_width="150dp"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/btn_rounded_green_300"
             android:backgroundTint="#08a"
             android:enabled="true"
