--- a/app/src/main/res/layout/activity_bio_data.xml
+++ b/app/src/main/res/layout/activity_bio_data.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/passport"
             android:layout_width="100sp"
             android:layout_height="100sp"
             android:layout_gravity="center"
@@ -49,8 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Full Name"
-                android:inputType="textCapWords"
-                 />
+                android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -351,11 +351,13 @@
 
                 android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <ProgressBar
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/home"
             android:layout_width="150dp"
