--- a/app/src/main/res/layout/activity_bio_data.xml
+++ b/app/src/main/res/layout/activity_bio_data.xml
@@ -239,13 +239,28 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Next Of Kin"
+            android:hint="Next Of Kin Name"
             android:padding="@dimen/spacing_small"
             app:counterEnabled="false"
             app:startIconDrawable="@drawable/ic_person_black_24dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nok"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Next Of Kin Phone"
+            android:padding="@dimen/spacing_small"
+            app:counterEnabled="false"
+            app:startIconDrawable="@drawable/ic_perm_phone_msg_black_24dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nok_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
